fix: Reduce gap between topic meta actions

--- a/common/common.scss
+++ b/common/common.scss
@@ -980,7 +980,7 @@
 .topic-compact-meta__actions {
   display: inline-flex;
   align-items: center;
-  gap: 3em;
+  gap: 2em;
   padding-left: 1em;
 }
 
